examples/datalog/09_recursion/22_short_circuit.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_short
Knowledge graph 'test_short' created.
Switched to knowledge graph: test_short
> .kg use test_short
Switched to knowledge graph: test_short
> +edge[(1, 2), (2, 3), (3, 4)].
Inserted 3 fact(s) into 'edge'.
> +path(X, Y) :- edge(X, Y).
Rule 'path' registered.
> +path(X, Z) :- path(X, Y), edge(Y, Z).
Rule 'path' registered.
> ?- path(X, Y).
6 rows:
  (1, 2)
  (1, 3)
  (1, 4)
  (2, 3)
  (2, 4)
  (3, 4)
> +path_count(<COUNT:Y>) :- path(1, Y).
Script error: Parse error: Invalid term: '<COUNT:Y>'
