examples/datalog/09_recursion/22_short_circuit.dl
% Test: Short circuit in recursion
% Expected: Recursion stops when fixpoint reached
% Category: 09_recursion
% Priority: P2 - Recursion patterns

.kg create test_short
.kg use test_short

% Simple linear chain (will reach fixpoint quickly)
+edge[(1, 2), (2, 3), (3, 4)].

% Transitive closure
+path(X, Y) :- edge(X, Y).
+path(X, Z) :- path(X, Y), edge(Y, Z).

?- path(X, Y).

% Count paths
+path_count(<COUNT:Y>) :- path(1, Y).

?- path_count(C).

.kg use default
.kg drop test_short
